--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,25 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
+*/dist
+*/tmp
+*/out-tsc
+*/bazel-out
 
 # Node
-/node_modules
+*/node_modules
 npm-debug.log
 yarn-error.log
 
 # IDEs and editors
-.idea/
+**/.idea/
 .project
 .classpath
 .c9/
 *.launch
 .settings/
 *.sublime-workspace
-.vs/
+**/.vs
 
 # Visual Studio Code
 .vscode/*
@@ -30,14 +30,15 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
+*/.angular/cache
+*/.sass-cache/
+*/connect.lock
+*/coverage
+*/libpeerconnection.log
+*/testem.log
+*/typings
 
 # System files
 .DS_Store
 Thumbs.db
+**/assets/config
