--- a/ap-pi/api/package.json
+++ b/ap-pi/api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "child_process": "^1.0.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1"
   }
 }
